k8s/argo-deploy/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  type: ClusterIP
  #type: NodePort
  ports:
    - port: 80
      targetPort: 80
      #nodePort: 32001
