k8s/argo-deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mi-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: miapp.local
      http:
        paths:
          - pathType: Prefix
            path: /?(.*)
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
          - pathType: Prefix
            path: /api/?(.*)
            backend:
              service:
                name: backend-service
                port:
                  number: 80
          - pathType: Prefix
            path: /historial/?(.*)
            backend:
              service:
                name: backend-service
                port:
                  number: 80
